feat: add notification routes
